--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <input type="submit" value="Submit" />
       </div>
     </form>
+
+    <!-- container for the canvases -->
     <div id="easel"></div>
   </body>
 </html>
